# burn-lm

./: .env  .gitignore  CITATION.cff  Cargo.toml  README.md  cubecl.toml
.cargo/: config.toml
.github/workflows/: publish.yml
benchmarks/: Cargo.toml  burn.toml  cubecl.toml
benchmarks/benches/: attention.rs  embedding.rs  transformer.rs  transformer_block.rs
burn-lm-book/: book.toml
burn-lm-book/src/: SUMMARY.md  new-model-implementation.md  overview.md
crates/burn-lm/: Cargo.toml
crates/burn-lm-cli/: Cargo.toml
crates/burn-lm-cli/config/: mprocs_web.yml
crates/burn-lm-cli/src/: cli.rs  lib.rs  utils.rs
crates/burn-lm-cli/src/commands/: backend.rs  backends.rs  chat.rs  delete.rs  download.rs  dtype.rs  mod.rs  models.rs  new.rs  run.rs  server.rs  shell.rs  web.rs
crates/burn-lm-http/: Cargo.toml
crates/burn-lm-http/src/: openapi.rs
crates/burn-lm-http/src/controllers/: chat_controllers.rs
crates/burn-lm-http/src/handlers/: chat_handlers.rs
crates/burn-lm-http/src/schemas/: chat_schemas.rs  model_schemas.rs
crates/burn-lm-http/src/stores/: chat_store.rs  mod.rs
crates/burn-lm-inference/: Cargo.toml
crates/burn-lm-inference/src/: client.rs  completion.rs  errors.rs  job.rs  lib.rs  message.rs  plugin.rs  server.rs  stats.rs  utils.rs
crates/burn-lm-inference/src/channels/: base.rs  mod.rs  mutex.rs  passthrough.rs
crates/burn-lm-llama/: Cargo.toml
crates/burn-lm-llama/src/: lib.rs
crates/burn-lm-llama/src/generation/: context.rs  generate.rs  mod.rs  sampling.rs  streaming.rs
crates/burn-lm-llama/src/nn/: fftn.rs  pos_encoding.rs  transformer.rs
crates/burn-lm-llama/src/nn/attention/: cache.rs  kv_cache.rs  mha.rs
crates/burn-lm-llama/src/nn/llama/: base.rs  import.rs  inference.rs  mod.rs  pretrained.rs  training.rs
crates/burn-lm-llama/src/server/: llama3.rs  mod.rs  tiny.rs
crates/burn-lm-llama/src/tokenizer/: base.rs  byte.rs  sentence_piece.rs  tiktoken.rs
crates/burn-lm-macros/: Cargo.toml
crates/burn-lm-macros/src/: lib.rs
crates/burn-lm-parrot/: Cargo.toml
crates/burn-lm-parrot/src/: lib.rs
crates/burn-lm-qwen3-moe/: Cargo.toml
crates/burn-lm-qwen3-moe/src/: error_wrapper.rs  hf_downloader.rs  lib.rs
crates/burn-lm-qwen3-moe/src/model/: .gitignore  attention.rs  basic_device_mapper.rs  config.rs  decoder_layer.rs  mod.rs  model.rs  moe.rs
crates/burn-lm-registry/: Cargo.toml
crates/burn-lm-registry/src/: lib.rs
crates/burn-lm/src/: main.rs
crates/burnlm/: Cargo.toml
crates/burnlm-cli/: Cargo.toml
crates/burnlm-cli/config/: mprocs_web.yml
crates/burnlm-cli/src/: backends.rs  cli.rs  lib.rs  utils.rs
crates/burnlm-cli/src/commands/: backend.rs  backends.rs  chat.rs  delete.rs  download.rs  dtype.rs  mod.rs  models.rs  new.rs  run.rs  server.rs  shell.rs  web.rs
crates/burnlm-http/: Cargo.toml
crates/burnlm-http/src/: app.rs  constants.rs  errors.rs  trace.rs
crates/burnlm-http/src/controllers/: chat_controllers.rs  model_controllers.rs
crates/burnlm-http/src/handlers/: chat_handlers.rs  mod.rs  model_handlers.rs
crates/burnlm-http/src/routers/: chat_routers.rs  model_routers.rs
crates/burnlm-http/src/schemas/: chat_schemas.rs  mod.rs  model_schemas.rs
crates/burnlm-http/src/stores/: chat_store.rs  mod.rs  model_store.rs
crates/burnlm-http/src/utils/: id.rs  llm.rs  mod.rs
crates/burnlm-inference/: Cargo.toml  build.rs
crates/burnlm-inference-llama3/: Cargo.toml
crates/burnlm-inference-llama3/src/: lib.rs
crates/burnlm-inference-template/: Cargo.toml
crates/burnlm-inference-template/src/: lib.rs
crates/burnlm-inference-tinyllama/: Cargo.toml
crates/burnlm-inference-tinyllama/src/: lib.rs
crates/burnlm-inference/src/: backends.rs  client.rs  errors.rs  lib.rs  message.rs  model.rs  plugin.rs  server.rs  stats.rs
crates/burnlm-inference/src/channels/: base.rs  mod.rs  mutex.rs  passthrough.rs
crates/burnlm-llama/: Cargo.toml  README.md
crates/burnlm-llama/src/: base.rs  lib.rs  pretrained.rs  transformer.rs
crates/burnlm-llama/src/generation/: context.rs  mod.rs
crates/burnlm-llama/src/nn/: attention.rs  fftn.rs  mod.rs  pos_encoding.rs  transformer.rs
crates/burnlm-llama/src/nn/attention/: cache.rs  kv_cache.rs  mha.rs  mod.rs
crates/burnlm-llama/src/nn/llama/: base.rs  (+1 more)
crates/burnlm-llama/src/server/: llama3.rs  tiny.rs
crates/burnlm-llama/src/tokenizer/: byte.rs  tiktoken.rs
crates/burnlm-macros/: Cargo.toml
crates/burnlm-macros/src/: lib.rs
crates/burnlm-parrot/: Cargo.toml
crates/burnlm-parrot/src/: lib.rs
crates/burnlm-plugin/: Cargo.toml
crates/burnlm-plugin-llama3/: Cargo.toml
crates/burnlm-plugin-llama3/src/: lib.rs
crates/burnlm-plugin-tinyllama/: Cargo.toml
crates/burnlm-plugin-tinyllama/src/: lib.rs
crates/burnlm-plugin/src/: base.rs  completion.rs  errors.rs  lib.rs  prompt.rs
crates/burnlm-registry/: Cargo.toml
crates/burnlm-registry/src/: lib.rs
crates/burnlm-server/: Cargo.toml
crates/burnlm-server/src/: app.rs  errors.rs  lib.rs  openapi.rs
crates/burnlm-server/src/controllers/: mod.rs  model_controllers.rs
crates/burnlm-server/src/handlers/: chat_handlers.rs  mod.rs  model_handlers.rs
crates/burnlm-server/src/routers/: chat_routers.rs  mod.rs  model_routers.rs
crates/burnlm-server/src/schemas/: chat_schemas.rs  mod.rs  model_schemas.rs
crates/burnlm-server/src/stores/: model_store.rs
crates/burnlm-server/src/utils/: llm.rs
crates/burnlm/src/: main.rs
crates/cli-launcher/: Cargo.toml
crates/cli-launcher/src/: main.rs
models/benchmarks/: Cargo.toml  cubecl.toml
models/benchmarks/benches/: attention.rs  transformer.rs  transformer_block.rs
models/llama/: Cargo.toml  README.md
models/llama-burn/: Cargo.toml  README.md
models/llama-burn/examples/: chat.rs
models/llama-burn/src/: cache.rs  lib.rs  llama.rs  pretrained.rs  transformer.rs
models/llama-burn/src/tokenizer/: byte.rs  mod.rs  sentence_piece.rs
models/llama/src/: lib.rs
xtask/: Cargo.toml
xtask/config/: docker-compose.chat.yml  mprocs_chat.yml
xtask/src/: main.rs
xtask/src/commands/: book.rs  chat.rs  mod.rs
