[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/burnlm-cli",
    "crates/burnlm-http",
    "crates/burnlm-inference",
    "crates/burnlm-inference-*",
    "crates/burnlm-macros",
    "crates/burnlm-registry",
    "models/llama-burn",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
# NOTE: autotune and fusion are disabled without default features 
# (and autotune is not correctly propagated to cuda if manually enabled)
burn = { version = "0.16.0", default-features = false, features = ["std"] }

anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.22", features = ["derive", "cargo"] }
darling = "0.20.10"
dirs = { version = "5.0.1" }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.20.2"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rand = "0.8.5"
rstest = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
syn = { version = "2.0.96", features = ["full"] }
tempfile = "3.16.0"
thiserror = "2"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.0", features = [
    "fs",
    "cors",
    "trace",
    "request-id",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "registry"]}
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

# models
base64 = { version = "0.22.1" }
rustc-hash = { version = "1.1.0" }
tiktoken-rs = { version = "0.5.8" }
tokenizers = { version = "0.19.1", default-features = false, features = ["onig"] }

### For xtask crate ###
tracel-xtask = { version = "=1.1.8" }

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
