[package]
name = "burn-lm-macros"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
chrono = { workspace = true }
darling.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
