[package]
name = "burn-lm-macros"
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = []
description = "Burn Large Models Engine - Macros."
documentation = "https://docs.rs/burn-lm-macros"
repository = "https://github.com/tracel-ai/burn-lm"
rust-version = "1.88"

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
chrono = { workspace = true }
darling.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
