[package]
name = "burn-lm-parrot"
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = []
description = "Burn Large Models Engine - Macros."
documentation = "https://docs.rs/burn-lm-parrot"
repository = "https://github.com/tracel-ai/burn-lm"
rust-version = "1.88"

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
burn = { workspace = true }
burn-lm-inference = { path = "../burn-lm-inference" }

rand = { workspace = true }
serde = { workspace = true }
