[package]
name = "burnlm-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
burnlm-inference = { path = "../burnlm-inference" }
burnlm-registry = { path = "../burnlm-registry" }

anyhow = { workspace = true }
clap = { workspace = true }
cloop = { workspace = true }
comfy-table = { workspace = true }
rustyline = { workspace = true }
strum = { workspace = true }
yansi = "1.0.1"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "burnlm"
path = "src/bin/burnlm.rs"
