[package]
name = "burnlm-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
burnlm-inference = { path = "../burnlm-inference" }
burnlm-registry = { path = "../burnlm-registry" }

anyhow = { workspace = true }
clap = { workspace = true }
cloop = { workspace = true }
comfy-table = { workspace = true }
rustyline = { workspace = true }
strum = { workspace = true }
yansi = { workspace = true }
spinners = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "burnlm-cli"
path = "src/bin/burnlm-cli.rs"
