[package]
name = "burnlm-inference-template"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
burn = { workspace = true }
burnlm-inference = { path = "../burnlm-inference", default-features = false }

rand = { workspace = true }
serde = { workspace = true }

