[package]
name = "burnlm-inference-tinyllama"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
burn = { workspace = true }
burnlm-inference = { path = "../burnlm-inference" }
llama-burn = { path = "../../models/llama-burn", features = ["tiny"] }

rand = { workspace = true }
serde = { workspace = true }

