[package]
name = "burnlm-plugin-llama3"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["tch-gpu"]

tch-gpu = ["burn/tch", "burnlm-plugin/tch-gpu"]

[dependencies]
burn = { workspace = true }
burnlm-plugin = { path = "../burnlm-plugin" }
llama-burn = { path = "../../models/llama-burn", features = ["llama3"] }

rand = { workspace = true }

